# h2o-meetups

./: README.md
2013_06_13_GLM/: README.md  glm_talk2.odp
2013_12_12_H2O_on_Hadoop/: h2o_on_hadoop_2013_12_12_meetup.pptx
2014_11_06_GOTO_Berlin/: README.md
2014_11_18_H2O_in_Big_Data_Environments/: H2OinBigDataEnvironments.pptx
2015_01_14_H2OFlow/: H2O-Flow_v2.pptx  README.md
2015_01_15_H2OStorm/: README.md
2015_01_20_Sparkling_Water/: README.md  README.md.txt
2015_01_27_GLM/: DistributedGLM_TK_2015_01_27_ATL.pptx  README.md  small_examples.R
2015_01_28_ML_For_Smarter_Apps/: README.md
2015_02_23_Scalable_ML_Using_R/: README.md  Scalable_ML_TK_2015_02_23_LAS.pptx
2015_04_09_data.table_indexes/: H2O Meetup 1.key  script.R
2015_05_12_BARUG_data.table_intro/: BARUG_20150512.odp
2015_05_14_H2O_Overview/: README.md
2015_05_30_RFinanceChicago/: RFinance2015_Lightning.odp
2025_10_16_How_to_Build_an_Agent/: .env.example  .gitignore  README.md  pyproject.toml
2025_10_16_How_to_Build_an_Agent/01_simple_agent/: simple_agent.ipynb
2025_10_16_How_to_Build_an_Agent/02_dataviz_agent/: README.md  __init__.py  __main__.py  agent.py  coffee_sales.csv  example_runs.ipynb  prompts.py  utils.py
2025_10_16_How_to_Build_an_Agent/02_dataviz_agent/outputs/example2/: customer_churn.csv
2025_10_16_How_to_Build_an_Agent/02_dataviz_agent/outputs/example3/: sales_performance.csv
2025_10_16_How_to_Build_an_Agent/03_sql_agent/: .env.example  README.md  __init__.py  __main__.py  agent.py  debug_test.py  example_runs.ipynb  prompts.py  utils.py
(+272 files in other folders)
